Withdraw model and activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,8 @@
 
         <activity android:name=".AddBikeActivity">
         </activity>
+        <activity android:name=".BicycleWithdrawActivity">
+        </activity>
     </application>
 
 </manifest>
