--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,8 @@
         </activity>
         <activity android:name=".BicycleWithdrawActivity">
         </activity>
+        <activity android:name=".WithdrawActivity">
+        </activity>
     </application>
 
 </manifest>
