--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         </activity>
         <activity android:name=".ReturnBikeActivity">
         </activity>
+        <activity android:name=".RideQuizActivity">
+        </activity>
     </application>
 
 </manifest>
