buscar usuário pelo nome/rg/cpf

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,15 @@
         </activity>
         <activity android:name=".RideQuizActivity">
         </activity>
+
         <activity android:name=".ChooseUserActivity">
+            <meta-data
+                    android:name="android.app.searchable"
+                    android:resource="@xml/searchable"/>
+
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
         </activity>
     </application>
 
