--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,11 +38,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-storage:16.0.2'
+    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-
-    implementation "com.leinardi.android:speed-dial:2.0.0"
 
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
 
