--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,24 @@
             android:required="true"/>
 
     <application
-
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".FullscreenImageActivity">
-        </activity>
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name">
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".FullscreenImageActivity">
+        </activity>
+        <activity
+                android:name=".MainActivity"
+                android:label="@string/app_name">
         </activity>
         <activity android:name=".AddUserActivity">
         </activity>
@@ -54,7 +55,6 @@
         </activity>
         <activity android:name=".RideQuizActivity">
         </activity>
-
         <activity android:name=".ChooseUserActivity">
             <meta-data
                     android:name="android.app.searchable"
