--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    defaultConfig.vectorDrawables.useSupportLibrary = true
 }
 
 dependencies {
