--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'realm-android'
+
 
 def work_version = "1.0.1"
 
@@ -11,8 +13,8 @@ android {
         applicationId "app.igormatos.botaprarodar"
         minSdkVersion 19
         targetSdkVersion 28
-        versionCode 2
-        versionName "1.4"
+        versionCode 3
+        versionName "2.0    "
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -43,9 +45,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
-//    implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.0.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -54,14 +56,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.1.0'
     implementation 'com.google.firebase:firebase-database:18.0.1'
     implementation 'com.google.firebase:firebase-storage:18.1.1'
+    implementation 'com.google.firebase:firebase-functions:18.0.0'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
-    implementation "org.jetbrains.anko:anko-commons:$anko_version"
-
     // Anko Layouts
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
     implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
     implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     implementation "org.jetbrains.anko:anko-design:$anko_version"
@@ -70,15 +72,15 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.11'
     kapt 'org.parceler:parceler:1.1.11'
 
-//    // Rx
-//    implementation 'com.jakewharton.rxbinding3:rxbinding:3.0.0-alpha2'
-
     implementation "android.arch.work:work-runtime-ktx:$work_version"
 
     implementation 'com.google.android.material:material:1.1.0-alpha08'
 
     implementation 'com.airbnb.android:lottie:3.0.7'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
+
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
 
 apply plugin: 'com.google.gms.google-services'
