--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,13 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.anko_version='0.10.5'
+
+    ext.coroutines_version = "1.3.0"
+    ext.room_version = "2.2.2"
+    ext.glide_version = "4.8.0"
+    ext.nav_version = "2.1.0"
+    ext.daggerVersion = '2.14.1'
+
     repositories {
         google()
         jcenter()
@@ -12,6 +19,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.0'
         classpath "io.realm:realm-gradle-plugin:6.1.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
 }
 
