--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.21'
-    ext.anko_version='0.10.5'
-
-    ext.coroutines_version = "1.3.0"
-    ext.room_version = "2.2.2"
-    ext.glide_version = "4.8.0"
-    ext.nav_version = "2.1.0"
-    ext.daggerVersion = '2.14.1'
+    ext {
+        kotlin_version = '1.4.10'
+        koin_version = '2.2.0-rc-3'
+        anko_version='0.10.5'
+        coroutines_version = "1.3.0"
+        room_version = "2.2.2"
+        glide_version = "4.8.0"
+        nav_version = "2.1.0"
+        daggerVersion = '2.14.1'
+    }
 
     repositories {
         google()
@@ -17,7 +19,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.3.0'
+        classpath 'com.google.gms:google-services:4.3.4'
         classpath "io.realm:realm-gradle-plugin:6.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
     }
