--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,6 +16,10 @@ jobs:
         uses: actions/setup-java@v1.4.3
         with: 
           java-version: 1.8
+      - name: Decode google-services.json
+        env:
+          FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET_DEV }}
+        run: echo $FIREBASE_SECRET > botaprarodar/app/google-services.json
 #       - name: Run unit tests
 #         run: ./gradlew clean test
 #       - name: Run instrumentation tests
