--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -18,8 +18,8 @@ jobs:
           java-version: 1.8
       - name: Decode google-services.json
         env:
-          FIREBASE_SECRET: ${{ secrets.FIREBASE_SECRET_DEV }}
-        run: echo $FIREBASE_SECRET > botaprarodar/app/google-services.json
+          FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
+        run: echo $FIREBASE_SECRET_DEV > botaprarodar/app/google-services.json
 #       - name: Run unit tests
 #         run: ./gradlew clean test
 #       - name: Run instrumentation tests
