--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -16,10 +16,11 @@ jobs:
         uses: actions/setup-java@v1.4.3
         with: 
           java-version: 1.8
+      
       - name: Decode google-services.json
         env:
           FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
-        run: echo $FIREBASE_SECRET_DEV > botaprarodar/app/google-services.json
+        run: echo $FIREBASE_SECRET_DEV > app/google-services.json
 #       - name: Run unit tests
 #         run: ./gradlew clean test
 #       - name: Run instrumentation tests
