--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ app/src/debug/google-services\.json
 app/src/release/google-services\.json
 
 app/src/debug/google-services_debug.json
+app/google-services.json
+*.json
