refactor(LoginActivity): Refactor and add tests
Update gradle wrapper

Dependency Injection setup

View binding setup

refactor deprecated references across project due to kotlin version update

Added toolkit project for code that can be shared between projects

Refactor FirebaseHelper, FirebaseAuth, SharedPreferences and Snackbar from static to Singleton modules

LoginActivity:
- unit tests
- added LoginActivityViewModel
- refactor navigation into LoginActivityNavigator
- refactor view references to use view binding

--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         glide_version = "4.8.0"
         nav_version = "2.1.0"
         daggerVersion = '2.14.1'
+        espresso_version = "3.3.0"
+        mockk_version = "1.10.2"
     }
 
     repositories {
@@ -17,7 +19,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath "io.realm:realm-gradle-plugin:6.1.0"
