--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
     testOptions{
         unitTests {
             includeAndroidResources = true
+            returnDefaultValues = true
         }
     }
 }
@@ -62,6 +63,7 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.1'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
@@ -127,10 +129,11 @@ dependencies {
 
     // Activity Rule
     testImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
     androidTestImplementation 'androidx.test:rules:1.2.0'
 
     // Mockito Framework
-    testImplementation 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.mockito:mockito-inline:2.13.0'
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.4'
