--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.4'
         classpath "io.realm:realm-gradle-plugin:6.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
     }
 }
 
