--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -30,6 +30,7 @@ jobs:
           target: default
           arch: x86
           profile: Nexus 6
+          emulator-options: -noaudio
           disable-animations: false
           script: ./gradlew connectedCheck
       - name: Generate APK
