--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     // Test
     testImplementation 'junit:junit:4.13.1'
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    testImplementation "io.mockk:mockk-android:$mockk_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
@@ -137,6 +138,11 @@ dependencies {
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.4'
+
+    // JUnit 5
+//    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.1"
+//    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.1"
+//    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.6.1"
 
 }
 
