--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,12 +62,14 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.1'
+    testImplementation "io.mockk:mockk:$mockk_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
+
 
     // Android Support and Views
     implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
@@ -107,6 +109,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -127,9 +130,6 @@ dependencies {
     // Activity Rule
     testImplementation 'androidx.test:rules:1.2.0'
     androidTestImplementation 'androidx.test:rules:1.2.0'
-
-    // Mockito Framework
-    testImplementation 'org.mockito:mockito-core:1.10.19'
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.4'
