--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
 
     // Test
     testImplementation 'junit:junit:4.13.1'
-    testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation "io.mockk:mockk:$mockk_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.test:runner:1.3.0"
@@ -71,6 +70,9 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
     androidTestImplementation "io.mockk:mockk-android:$mockk_version"
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestUtil 'androidx.test:orchestrator:1.3.0'
+
 
     // Android Support and Views
     implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
@@ -85,6 +87,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:18.1.1'
     implementation 'com.google.firebase:firebase-functions:19.0.2'
     implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.google.firebase:firebase-crashlytics:17.3.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
 
     // Anko Layouts
     implementation "org.jetbrains.anko:anko-commons:$anko_version"
@@ -109,8 +113,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:$room_version"
-    kapt 'com.android.databinding:compiler:3.1.4'
     implementation "androidx.room:room-ktx:$room_version"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
 
     //Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -130,11 +134,7 @@ dependencies {
 
     // Activity Rule
     testImplementation 'androidx.test:rules:1.2.0'
-    androidTestImplementation 'androidx.test.ext:junit-ktx:1.1.2'
     androidTestImplementation 'androidx.test:rules:1.2.0'
-
-    // Mockito Framework
-    testImplementation 'org.mockito:mockito-inline:2.13.0'
 
     // Robolectric
     testImplementation 'org.robolectric:robolectric:4.4'
