--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           api-level: 29
           arch: x86_64
+          emulator-options: -no-window
           script: ./gradlew connectedCheck --stacktrace
       - name: Generate APK
         run: ./gradlew clean assembleDebug
