--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -28,8 +28,7 @@ jobs:
         with:
           api-level: 29
           arch: x86_64
-          emulator-options: -no-window
-          script: ./gradlew connectedCheck --stacktrace
+          script: ./gradlew connectedDebugAndroidTest
       - name: Generate APK
         run: ./gradlew clean assembleDebug
       - name: Rename APK
