--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     // Test
     testImplementation 'junit:junit:4.13.1'
     testImplementation "io.mockk:mockk:$mockk_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
@@ -143,8 +144,8 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:4.4'
 
     // JUnit 5
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.1"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.1"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.0"
     testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.6.1"
 
     // Task await
