--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -21,16 +21,14 @@ jobs:
         env:
           FIREBASE_SECRET_DEV: ${{ secrets.FIREBASE_SECRET_DEV }}
         run: echo $FIREBASE_SECRET_DEV > app/google-services.json
-#       - name: Run unit tests
-#         run: ./gradlew clean test
-      - name: Run instrumentation tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 29
-          disable-animations: false
-          emulator-options: -noaudio
-          arch: x86_64
-          script: ./gradlew connectedCheck
+      - name: Run unit tests
+        run: ./gradlew clean test
+#       - name: Run instrumentation tests
+#         uses: reactivecircus/android-emulator-runner@v2
+#         with:
+#           api-level: 29
+#           arch: x86_64
+#           script: ./gradlew connectedCheck
       - name: Generate APK
         run: ./gradlew clean assembleDebug
       - name: Rename APK
