--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
     repositories {
         google()
         jcenter()
+        gradlePluginPortal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.1'
@@ -25,6 +26,7 @@ buildscript {
         classpath "io.realm:realm-gradle-plugin:6.1.0"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
+        classpath 'nu.studer:gradle-credentials-plugin:2.1'
     }
 }
 
@@ -35,6 +37,8 @@ allprojects {
         maven { url 'https://jitpack.io' }
     }
 }
+
+apply plugin: 'nu.studer.credentials'
 
 task clean(type: Delete) {
     delete rootProject.buildDir
