--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -53,7 +53,7 @@ jobs:
           java-version: 1.8
 
       - name: Assemble app debug APK
-        run: bash ./gradlew assembleDebug --stacktrace
+        run: ./gradlew assembleDebug --stacktrace
         #env:
           #ZTM_API_KEY: ${{ secrets.ZTM_API_KEY }}
       - name: Upload app APK
