ajuste de fluxo de adicionar bicicleta.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,9 @@ android {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
-    buildFeatures {
-        dataBinding true
-    }
+    /*buildFeatures {
+        dataBinding false
+    }*/
 
     defaultConfig.vectorDrawables.useSupportLibrary = true
 
