Iserindo dataBind na view e rafatorando alguns métodos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,16 +38,13 @@ android {
     }
 
     buildFeatures {
+        dataBinding true
         viewBinding true
     }
 
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
-
-    /*buildFeatures {
-        dataBinding false
-    }*/
 
     defaultConfig.vectorDrawables.useSupportLibrary = true
 
