update GCloud configs for tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
             debuggable true
             multiDexEnabled true
             shrinkResources false
+            minifyEnabled false
             useProguard false
 
             buildConfigField "String", "BASE_URL", "\"https://bpr-dev.firebaseio.com\""
