--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,10 +2,9 @@ name: Continuous Integration
 
 on:
   push:
-    branches: [ master, development, test_ui_labtest_firebase ]
-#   pull_request:
-#     branches: [ master, development ]
-
+    branches: [ main, development, test_ui_labtest_firebase ]
+  pull_request:
+    branches: [ main, development ]
 jobs:
   build:
     name: Tests Unitaires
