move checkout form unit_tests action to workflow

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -10,4 +10,6 @@ jobs:
     name: Unit Tests
     runs-on: macos-latest
     steps:
+      - name: Checkout project
+          uses: actions/checkout@v2
       - uses: ./.github/actions/unit_tests
