--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -8,6 +8,8 @@ jobs:
     name: Unit Tests
     runs-on: macos-latest
     steps:
+      - name: Checkout project
+          uses: actions/checkout@v2
       - uses: ./.github/actions/unit_tests
 
   apk:
