--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -12,4 +12,5 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
-      - uses: .github/actions/unit_tests
+      - name: "Run Unit Tests"
+          uses: ./.github/actions/unit_tests
