update CI machine architecture

--- a/.github/workflows/continuous-integration-pull-request.yml
+++ b/.github/workflows/continuous-integration-pull-request.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        api-level: 29
-        arch: x64
+        api-level: [29]
+        arch: [x64]
 
     steps:
       - name: Checkout project
