update dev ci naming and remove unnecessary workflow

--- a/.github/workflows/DEV_CI.yml
+++ b/.github/workflows/DEV_CI.yml
@@ -1,8 +1,8 @@
-name: Continuous Integration
+name: DEV_CI
 
 on:
   pull_request:
-    branches: [ main, development ]
+    branches: [ development ]
 
 jobs:
   build:
